oshk/tinyboy-wp/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: tinyboy-wordpress
  labels:
    owner: tinyboy
    app: wordpress
spec:
  selector:
    matchLabels:
      owner: tinyboy
      app: wordpress
  template:
    metadata:
      labels:
        owner: tinyboy
        app: wordpress
    spec:
      imagePullSecrets:
        - name: acr
      volumes:
        - name: upload
          azureFile:
            secretName: cotablob-file
            shareName: tinyboy-wordpress
            readOnly: false
        - name: nginx-config
          configMap:
            name: nginx-wordpress
        - name: fpm-config
          configMap:
            name: php-fpm-wordpress
      containers:
        - name: nginx
          image: hkcota.azurecr.io/tinyboy/wordpress:1.1.0-nginx
          livenessProbe:
            tcpSocket:
              port: http
            timeoutSeconds: 1
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/wp-content/uploads
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          ports:
            - containerPort: 80
              name: http
        - name: fpm
          image: hkcota.azurecr.io/tinyboy/wordpress:1.1.0-fpm
          command: ["/usr/local/bin/docker-entrypoint.sh", "php-fpm", "-R"]
          livenessProbe:
            tcpSocket:
              port: service
            timeoutSeconds: 1
            initialDelaySeconds: 10
          ports:
            - containerPort: 9000
              name: service
          volumeMounts:
            - name: upload
              mountPath: /var/www/html/wp-content/uploads
            - name: fpm-config
              mountPath: /usr/local/etc/php-fpm.conf
              subPath: php-fpm.conf
            - name: fpm-config
              mountPath: /usr/local/etc/php-fpm.d/www.conf
              subPath: www.conf
