oshk/tinyboy-wp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tinyboy-wordpress
  labels:
    owner: tinyboy
    app: wordpress
spec:
  rules:
    - host: www.tinyboy.org
      http:
        paths:
          - backend:
              serviceName: tinyboy-wordpress
              servicePort: 80
            path: /
    - host: tinyboy.org
      http:
        paths:
          - backend:
              serviceName: tinyboy-wordpress
              servicePort: 80
            path: /
